[package]
name = "sql-builder-meta-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.13.0"
paste = "1.0.15"
proc-macro2 = "1.0.86"
quote = "1.0.36"
regex = "1.10.5"
syn = "2.0.71"
sql-builder-def = { path = "../sql-builder-def" }